# acitools

./: .gitignore  Cargo.toml  LICENSE  README.md
aciobject-gen/: Cargo.toml  tmp.rs
aciobject-gen/resources/: tmp.rs
aciobject-gen/src/: main.rs
examples/: ack-fault.rs  create-ap.rs  create-bd-subnet.rs  create-bd.rs  create-epg.rs  create-tenant.rs  create-user.rs  create-vrf.rs  delete-ap.rs  delete-bd-subnet.rs  delete-bd.rs  delete-tenant.rs  delete-vrf.rs  get-ap.rs  get-bd-subnets.rs  get-bd.rs  get-epg.rs  get-fabric-pod.rs  get-l3out.rs  get-relation-between-bd-and-vrf.rs  get-system.rs  get-tenants.rs  get-vrf-from-tenant.rs  get-vrf.rs  update-epg.rs  update-tenant.rs
src/: aaa.rs  bgp.rs  client.rs  eqpt.rs  error.rs  ethpm.rs  fault.rs  firmware.rs  fv.rs  l1.rs  l3ext.rs  lib.rs  lldp.rs  main.rs  ospf.rs  uribv4.rs  uribv6.rs
src/aaa/: domain.rs  login.rs  role.rs  user.rs
src/aciconf/: bridge_domain.rs  mod.rs
src/bgp/: additional_paths.rs  administrative_distance.rs  as_item.rs  as_segment.rs  attached_nexthop.rs  bridge_domain_evpn_instance.rs  circuit_endpoint_evpn_instance.rs  dampening_control.rs  db.rs  default_route_leak_policy.rs  discovered_tep.rs  domain.rs  domain_address_family.rs  domain_evpn_instance.rs  domain_id.rs  encap_group_evpn_instance.rs  entity.rs  evpn_imet_route.rs  evpn_ip_prefix_route.rs  evpn_mac_ip_route.rs  ext_epg.rs  extended_community.rs  graceful_restart.rs  graceful_restart_state.rs  host_route_leak_policy.rs  infra_l3out.rs  instance.rs  local_asn.rs  (+28 more)
tests/: ap.rs  bd.rs  client.rs  ctx.rs  tenant.rs
(+222 files in other folders)
