[package]
name = "acitools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
ipnetwork = "0.20.0"
regex = "1.8.2"
reqwest = { version = "0.11.17", features = ["json", "cookies"] }
rpassword = "7.2.0"
serde = { version = "1.0.160", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
serde_with = "3.3.0"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.3.1"

[[test]]
name = "client"
